ошибки при падении, переподключение, метрики прометей